# aoc

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
2023/day1/: CMakeLists.txt  day1p1.cpp  day1p2.cpp
aoc-2024/: Cargo.toml
aoc-2024/src/day1/: input.rs  mod.rs  solver.rs
aoc-2024/src/day2/: input.rs  solver.rs
runner/: Cargo.toml
runner/src/: main.rs
